# modajo

./: .gitignore  README.md  pyproject.toml  requirements.txt  schema.drawio
modajo/: __init__.py  config.py  database.py  extensions.py  models.py
