[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "modajo"
version = "0.0.1"
authors = [
    {name="Kozmik Moore", email="koz.moore@gmail.com"},
]
description = """A web-based journaling application that supports multiple, distinct journals."""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Framework :: Flask",
]
dependencies = [
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "PyYAML==6.0.2"
]

[tool.setuptools.packages.find]
exclude = ["instance"]